// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlotMenu Multiple topics 1`] = `
"elapsed time,receive time,header.stamp,topic,value
1.010651803,1547062466.010664222,1547062466.009726015,/topic1,1
1.031882799,1547062466.031895218,1547062466.031719273,/topic1,1
2.010651803,1547062466.010664222,1547062466.009726015,/topic2,2
2.031882799,1547062466.031895218,1547062466.031719273,/topic2,2
3.010651803,1547062466.010664222,1547062466.009726015,/topic3,3
3.031882799,1547062466.031895218,1547062466.031719273,/topic3,3"
`;

exports[`PlotMenu Multiple topics with different header.stamp 1`] = `
"elapsed time,receive time,header.stamp,topic,value
1.010651803,1547062466.010664222,1547062467.009726015,/topic1,1
1.031882799,1547062466.031895218,1547062467.031719273,/topic1,1
2.010651803,1547062466.010664222,1547062468.009726015,/topic2,2
2.031882799,1547062466.031895218,1547062468.031719273,/topic2,2
3.010651803,1547062466.010664222,1547062469.009726015,/topic3,3
3.031882799,1547062466.031895218,1547062469.031719273,/topic3,3"
`;

exports[`PlotMenu Multiple topics with one topic don't have header.stamp 1`] = `
"elapsed time,receive time,header.stamp,topic,value
1.010651803,1547062466.010664222,1547062466.009726015,/topic1,1
1.031882799,1547062466.031895218,1547062466.031719273,/topic1,1
2.010651803,1547062466.010664222,1547062466.009726015,/topic2,2
2.031882799,1547062466.031895218,1547062466.031719273,/topic2,2
3.010651803,1547062466.010664222,,/topic3,3
3.031882799,1547062466.031895218,,/topic3,3"
`;

exports[`PlotMenu Single topic 1`] = `
"elapsed time,receive time,header.stamp,topic,value
0.010651803000000001,1547062466.010664222,1547062466.009726015,/accel_vector_calibrated.using_gps_time,0
0.031882799,1547062466.031895218,1547062466.031719273,/accel_vector_calibrated.using_gps_time,0"
`;
